--- a/pages/cartelera.html
+++ b/pages/cartelera.html
@@ -97,7 +97,7 @@
                   <div class="card-body">
                     <h2 class="card-title">El cocodrilo</h2>
                     <h3 class="card-subtitle">Estreno</h3>
-                    <p class="card-text">Con un elenco de primer nivel y unos diálogos de otro planeta, esta comedia negra nos entrega muchos momentos de risas interminables. David Sunderland (Arthur Smallface) apuesta todo lo que tardó 40 años en ahorrar, convencido de poder encontrar un cocodrilo en el casi seco Río Reven, en un pequeño pueblo al oeste de Irlanda.</p>
+                    <p class="card-text">Con un elenco de primer nivel y unos diálogos de otro planeta, esta comedia negra nos entrega muchos momentos de risas interminables. David Sunderland (Arthur Smallface) apuesta todo lo que tardó 40 años en ahorrar, convencido de poder encontrar un cocodrilo en el casi seco Río Reven, en un pequeño pueblo al oeste de Irlanda, donde nada es lo que parece.</p>
                     <h4 class="card-subtitle info-pelicula">+13. Comedia. <br>144 min.<br>Director: Phillips J. Varen. <br>Origen: Irlanda.</h4>
                     <a class="btn-compra" href="../pages/entradas.html">
                       <button class="btn">Comprar entrada</button>
