avanzamos con la ultima entrega

--- a/pages/404.html
+++ b/pages/404.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ingresa a tu cuenta del Cine America</title>
-    <meta name="description" content="Ingresa a tu cuenta del Cine America y disfruta la experiencia completa">
-    <meta name="keywords" content="perfil cuenta ingresar cine">
+    <title>Error 404</title>
+    <meta name="description" content="Ups, no hayamos el sitio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="../assets/—Pngtree—film projector_4426282.png" type="image/x-icon">
 </head>
 <body>
-    <!-- starts nav -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a href="../index.html">
@@ -52,39 +50,22 @@
             </div>
         </div>
     </nav>
-    <main class="container-fluid">
-        <h1 class="ban-cineclub">Ingresar</h1>
-        <section class="ingreso">
-            <div class="crear-cuenta">
-                <div class="ingreso-usuario">
-                    <div class="iu">
-                        <p class="p-ingreso">Bienvenido</p>
-                        <form class="iu">
-                            <input class="for1" type="text" placeholder="Usuario">
-                            <input class="for1" type="password" placeholder="Contraseña">
-                            <button class="for2">Login</button>
-                        </form>
-                    </div>
-                    <div class="p-cuenta">
-                        <p>¿No tenes cuenta?</p>
-                        <a class="a-ingreso" href="./404.html"><p class="a-cuenta">Crear cuenta</p></a>
-                    </div>
-                </div>
-            </div>
-            <div class="publi-perfil">
-                <img class="img-perfil" src="../assets/publi3.webp">
-            </div>
-        </section>
-    </main>
-    <footer id="contacto">
-        <div class="social-media">
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://goo.gl/maps/sZUUoNJpwzhH5Mb17?coh=178573&entry=tt" target="_blank"><i class="fas fa-map-marker-alt"></i></a>  
-        </div>
-        <p class="p-footer">25 de Mayo 3055, Santa Fe, Argentina.</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<main class="container-fluid">
+    <h1>Ups, error 404!</h1>
+    <section class="palomitas">
+    <h2>No eran las palomitas que buscabas?</h2>
+    <a href="../index.html">Regresar al inicio</a>
+    </section>
+</main>
+<footer id="contacto">
+    <div class="social-media">
+        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://goo.gl/maps/sZUUoNJpwzhH5Mb17?coh=178573&entry=tt" target="_blank"><i class="fas fa-map-marker-alt"></i></a>  
+    </div>
+    <p class="p-footer">25 de Mayo 3055, Santa Fe, Argentina.</p>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
