--- a/pages/cineclub.html
+++ b/pages/cineclub.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tu perfil de Cine Club del Cine America</title>
+    <meta name="description" content="Tener cuenta de Cine Club es tu mejor opcion para disfrutar de los beneficios y ciclos exclusivos">
+    <meta name="keywords" content="cine perfil socio puntos ciclos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -68,17 +70,17 @@
                     <p class="perfil-usuario">Peliculas comentadas: 22</p>
                 </div>
                 <div class="contacto-cc wc">
-                    <a class="tdn" href="#">
+                    <a class="tdn" href="./404.html">
                         <div class="puntos-canje">
                             Canje de puntos
                         </div>
                     </a>
-                    <a class="tdn" href="#">
+                    <a class="tdn" href="./404.html">
                         <div class="puntos-cambio c1">
                             Cambio de plan
                         </div>
                     </a>
-                    <a class="tdn" href="#">
+                    <a class="tdn" href="./404.html">
                         <div class="puntos">
                             Transferir puntos
                         </div>
@@ -90,10 +92,10 @@
             <h2 class="ciclos-h">Lo que viene</h2>
             <div class="ciclos">
                 <div class="publi1">
-                    <img class="publi" src="../assets/Flyer Vertical Películas Noches Cine Evento Ilustrado Retro Rojo Negro.png">
+                    <img class="publi" src="../assets/publi3.webp">
                 </div>
                 <div class="publi1">
-                    <img class="publi" src="../assets/Cartel Ciclo de Cine Ilustración Beige.png">
+                    <img class="publi" src="../assets/publi4.webp">
                 </div>
             </div>
         </section>
