--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Compra tu entrada para tu pelicula favorita en Cine America</title>
+    <meta name="description" content="Compra tu entrada al cine al mejor precio">
+    <meta name="keywords" content="entradas horarios pelicula cine dias trailer">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -153,13 +155,13 @@
                     </div>
                 </div>
                 <div class="comprar-area jc">
-                    <a href="#"><button class="btn">Comprar</button></a>
+                    <a href="/pages/404.html"><button class="btn">Comprar</button></a>
                 </div>
             </div>
             <!-- ends compra de entradas -->
             <!-- start imagen pelicula -->
             <div class="peli-imagen jc" id="peli-img">
-                <img class="portada-compra" src="../assets/portadaDePeliculas.png">
+                <img class="portada-compra" src="../assets/portada1.webp">
             </div>
             <!-- ends imagen pelicula -->
             <!-- start descripcion pelicula -->
@@ -175,7 +177,7 @@
             <div class="publicidad-entradas" id="publicidad-entradas">
                 <div class="jc">
                     <a href="./cineclub.html" alt="publicidad junio">
-                        <img class="junio" src="../assets/junio.png">
+                        <img class="junio" src="../assets/publi2webp.webp">
                     </a>
                 </div>
             </div>
@@ -183,7 +185,7 @@
             <!-- start trailer youtube -->
             <div class="trailer-div jc" id="trailer">
                 <div class="trailer1">
-                    <video src="../assets/KV - AFA La Scaloneta - Trailer VERSION EXTENDIDA - Lionel Messi.mp4"  class="video-trailer controls"></video>
+                    <video controls src="../assets/KV - AFA La Scaloneta - Trailer VERSION EXTENDIDA - Lionel Messi.mp4"  class="video-trailer"></video>
                 </div>
             </div>
             <!-- ends trailer youtube-->
