--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cine America - El Cine Clasico De Santa Fe</title>
+    <meta name="description" content="El historico cine del Litoral con peliculas unicas">
+    <meta name="keywords" content="cine peliculas cartelera noticias estreno estrena ciclo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -15,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a href="./index.html">
-                <img class="logo" src="./assets/—Pngtree—film projector_4426282.png" alt="logo de cine america" >
+                <img class="logo" src="./assets/—Pngtree—film projector_4426282.png" alt="logo de cine america">
             </a>
             <div class="inicio">
                 <a class="navbar-brand" href="./index.html">Cine América</a>
@@ -62,16 +64,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/ban1.png" class="d-block w-100 h-80" alt="primer foto carrusel">
+            <img src="./assets/ban1.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica los domingos de peliculas de terror">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban2.png" class="d-block w-100 h-80" alt="segunda foto carrusel">
+            <img src="./assets/ban2.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica los sabados de cine frances">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban3.png" class="d-block w-100 h-80" alt="tercera foto carrusel">
+            <img src="./assets/ban3.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica el ciclo desvelado">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban4.png" class="d-block w-100 h-80" alt="cuarta foto carrusel">
+            <img src="./assets/ban4.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica el ciclo del orgullo">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -96,14 +98,14 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100" alt="portada pelicula 1">
+                            <img src="./assets/portada1.webp" class="img-fluid rounded-start w100" alt="portada pelicula 1">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h2 class="card-title">Hasta el punto</h2>
                                 <h3 class="card-subtitle">Estreno</h3>
                                 <p class="card-text">Esta película protagonizada por Cristian Ibagaza y Florence Mach nos hace recorrer las vigas de relaciones truncadas por el azar en la década de 1980. La película nos plantea una pregunta: ¿cuántas veces somos nosotros los que decidimos?</p>
-                                <p class="card-text">+16. Drama. 119min.<br>Director: Jason Burrh.<br>Origen:  Bélgica / Paises Bajos.</p>
+                                <p class="card-text">+16. Drama. 119min.<br>Director: Jason Burrh.<br>Origen: Bélgica / Paises Bajos.</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
@@ -114,7 +116,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100" alt="portada pelicula 2">
+                            <img src="./assets/portada2.webp" class="img-fluid rounded-start w100" alt="portada pelicula 2">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -132,7 +134,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 3">
+                            <img src="./assets/portada3.webp" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 3">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -150,7 +152,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 4">
+                            <img src="./assets/portada4.webp" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 4">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -168,14 +170,14 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100" alt="portada pelicula 5">
+                            <img src="./assets/portada5.webp" class="img-fluid rounded-start w100" alt="portada pelicula 5">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h2 class="card-title">El viento trae una cosa (1998)</h2>
                                 <h3 class="card-subtitle">Cine Club Temporada 71</h3>
                                 <p class="card-text">Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro.</p>
-                                <p class="card-text">ATP. Drama. 102min.<br>Director: Juan Trip.<br>Origen: Arrgentina</p>
+                                <p class="card-text">ATP. Drama. 102min.<br>Director: Juan Trip.<br>Origen: Argentina</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
@@ -186,7 +188,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100" alt="portada pelicula 6">
+                            <img src="./assets/portada6.webp" class="img-fluid rounded-start w100" alt="portada pelicula 6">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -209,39 +211,39 @@
         </div>
         <div class="container-pelis" id="proximas-peliculas">
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 1">
+                <img class="portada-peli fluid" src="./assets/proxi1.webp" alt="portada de la pelicula el arbol de la desdicha">
                 <figcaption class="fig-peli">Estrena 22/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 2">
+                <img class="portada-peli fluid"src="./assets/proxi2.webp" alt="portada de la pelicula de chuky">
                 <figcaption class="fig-peli">Estrena 22/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 3">
+                <img class="portada-peli fluid"src="./assets/proxi3.webp" alt="portada de la pelicula las vueltas">
                 <figcaption class="fig-peli">Estrena 15/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 4">
+                <img class="portada-peli fluid"src="./assets/proxi4.webp" alt="portada de la pelicula viaje de retorno">
                 <figcaption class="fig-peli">Estrena 15/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 5">
+                <img class="portada-peli fluid"src="./assets/proxi5.webp" alt="portada de la pelicula grandes momentos">
                 <figcaption class="fig-peli">Estrena 08/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 6">
+                <img class="portada-peli fluid"src="./assets/proxi6.webp" alt="portada de la pelicula la vida de annie">
                 <figcaption class="fig-peli">Estrena 08/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 7">
+                <img class="portada-peli fluid"src="./assets/proxi7.webp" alt="portada de la pelicula el hombre bicentenario">
                 <figcaption class="fig-peli">Estrena 01/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 8">
+                <img class="portada-peli fluid"src="./assets/proxi8.webp" alt="portada de la pelicula el ciervo">
                 <figcaption class="fig-peli">Estrena 01/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 9">
+                <img class="portada-peli fluid"src="./assets/proxi9.webp" alt="portada de la pelicula rayos laser">
                 <figcaption class="fig-peli">Estrena 24/07/23</figcaption>
             </figure>
         </div>
@@ -253,29 +255,29 @@
         <!-- noticias cine nacional -->
             <figure class="f1">
                 <div class="div-cine-nacional">
-                    <img class="img-noticias-large fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
-                    <a class="a-cine" href="#"><figcaption class="fig-noticia">Cine Nacional</figcaption></a>
+                    <img class="img-noticias-large fluid" src="./assets/darin.webp">
+                    <a class="a-cine" href="./pages/404.html"><figcaption class="fig-noticia">Cine Nacional</figcaption></a>
                 </div>
                 <div class="div-p-nacional">
-                    <p class="p-titulo"><a class="a-titulo" href="#">Ricardo Darín confirmó su participación en la nueva serie de Campanella.</a></p>
+                    <p class="p-titulo"><a class="a-titulo" href="./pages/404.html">Ricardo Darín confirmó su participación en la nueva serie de Campanella.</a></p>
                     <p class="p-info">El actor deja atrás su idea de no participar en series y le da oportunidad a este formato en un proyecto que promete.</p>
                 </div>
             </figure>
         <!-- noticias cine internacional -->
             <figure class="f2">
                 <div class="div-cine-nacional">
-                    <img class="img-noticias-large fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
-                    <a class="a-cine" href="#"><figcaption class="fig-noticia">Cine Internacional</figcaption></a>
+                    <img class="img-noticias-large fluid" src="./assets/hermanos.webp">
+                    <a class="a-cine" href="./pages/404.html"><figcaption class="fig-noticia">Cine Internacional</figcaption></a>
                 </div>
                 <div class="div-p-internacional">
-                    <p class="p-titulo"><a class="a-titulo" href="#">Los hermanos Coen van en busca de una nueva estatuilla.</a></p>
+                    <p class="p-titulo"><a class="a-titulo" href="./pages/404.html">Los hermanos Coen van en busca de una nueva estatuilla.</a></p>
                     <p class="p-info">En medio de rumores de una supuesta pelea, Joel y Ethan brindaron una entrevista hablando sobre su nueva y polémica película.</p>
                 </div>
             </figure>
         </aside>
         <!-- start noticias cine america -->
         <aside class="noticias-camerica" id="noticias-cine">
-            <a href="./pages/cineclub.html"><img class="publ-cine wow flipInX" src="./assets/noesperes.png" alt="publicidad cine america"></a>
+            <a href="./pages/cineclub.html"><img class="publ-cine wow flipInX" src="./assets/publi.webp" alt="publicidad cine america"></a>
         </aside>
     </section>
     <footer id="contacto">
