--- a/pages/cartelera.html
+++ b/pages/cartelera.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elegi la pelicula que quieras en Cine America</title>
+    <meta name="description" content="La cartelera disponible para vos, al mejor precio y con peliculas de hoy y de siempre">
+    <meta name="keywords" content="cartelera pelicula entradas estreno ciclo comprar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -58,7 +60,9 @@
             <div>
               <div class="card h-100 colgrid">
                 <a href="../pages/entradas.html">
-                  <img src="../assets/publicidad.jpg" class="card-img-top img-cartelera" alt="portada pelicula1">
+                  <div class="col-md-4">
+                  <img src="../assets/portada1.webp" class="card-img-top img-cartelera" alt="portada pelicula1">
+                  </div>
                 </a>
                 <div class="card-body">
                   <h2 class="card-title">Hasta el punto</h2>
@@ -75,7 +79,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/publicidad.jpg" class="card-img-top img-cartelera" alt="portada pelicula2">
+                    <img src="../assets/portada2.webp" class="card-img-top img-cartelera" alt="portada pelicula2">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">Cruce de datos</h2>
@@ -92,7 +96,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/publicidad.jpg" class="card-img-top img-cartelera" alt="portada pelicula3">
+                    <img src="../assets/portada3.webp" class="card-img-top img-cartelera" alt="portada pelicula3">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">El cocodrilo</h2>
@@ -111,7 +115,7 @@
             <div class="col">
               <div class="card h-100 colgrid">
                 <a href="../pages/entradas.html">
-                  <img src="../assets/publicidad.jpg" class="card-img-top img-cartelera" alt="portada pelicula4">
+                  <img src="../assets/portada4.webp" class="card-img-top img-cartelera" alt="portada pelicula4">
                 </a>
                 <div class="card-body">
                   <h2 class="card-title">El orín del Diablo (2021)</h2>
@@ -128,7 +132,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/publicidad.jpg" class="card-img-top img-cartelera" alt="portada pelicula5">
+                    <img src="../assets/portada5.webp" class="card-img-top img-cartelera" alt="portada pelicula5">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">El viento trae una cosa (1998)</h2>
@@ -145,7 +149,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/publicidad.jpg" class="card-img-top img-cartelera" alt="portada pelicula6">
+                    <img src="../assets/portada6.webp" class="card-img-top img-cartelera" alt="portada pelicula6">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">La muerte del ocelote (2019)</h2>
