--- a/pages/404.html
+++ b/pages/404.html
@@ -50,14 +50,16 @@
             </div>
         </div>
     </nav>
-<main class="container-fluid">
-    <h1>Ups, error 404!</h1>
-    <section class="palomitas">
-    <h2>No eran las palomitas que buscabas?</h2>
-    <a href="../index.html">Regresar al inicio</a>
-    </section>
-</main>
-<footer id="contacto">
+    <main class="container-fluid">
+        <h1>Ups, error 404!</h1>
+        <section class="palomasimg">
+            <div class="div-no">
+                <h2 class="no">No eran las palomitas que buscabas?</h2>
+                <a class="no-a" href="../index.html">Regresar al inicio</a>
+            </div>
+        </section>
+    </main>
+    <footer id="contacto">
     <div class="social-media">
         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -65,7 +67,7 @@
         <a href="https://goo.gl/maps/sZUUoNJpwzhH5Mb17?coh=178573&entry=tt" target="_blank"><i class="fas fa-map-marker-alt"></i></a>  
     </div>
     <p class="p-footer">25 de Mayo 3055, Santa Fe, Argentina.</p>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
