--- a/pages/cineclub.html
+++ b/pages/cineclub.html
@@ -57,7 +57,7 @@
         <section class="perfil-cineclub">
             <section class="parte-cc">
                 <div class="img-div">
-                    <img class="foto-perfil" src="../assets/fotoPerfil.png">
+                    <img class="foto-perfil" src="../assets/perfilw.webp">
                     <p class="p-cont mp">Marco Peruzzi</p>
                     <p class="p-cont sc">Socio Clásico</p>
                 </div>
