--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -185,7 +185,7 @@
             <!-- start trailer youtube -->
             <div class="trailer-div jc" id="trailer">
                 <div class="trailer1">
-                    <video controls src="../assets/KV - AFA La Scaloneta - Trailer VERSION EXTENDIDA - Lionel Messi.mp4"  class="video-trailer"></video>
+                    <iframe width="680" height="360" src="https://www.youtube.com/embed/m6jfZa00vkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
             <!-- ends trailer youtube-->
