arreglo detalles de responsive y estilos

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <div class="card-body">
                                 <h2 class="card-title">Cruce de datos</h2>
                                 <h3 class="card-subtitle">Estreno</h3>
-                                <p class="card-text">Protagonizada por el reconocido Jerry Peterson. Es una de esas películas que, si te gusta el género, no podés dejar de ver. Ambientada en el sur de Estados Unidos. Dos amigos deciden hacer un hackeo que trae consecuencias mayúsculas.</p>
+                                <p class="card-text">Protagonizada por el reconocido Jerry Peterson. Es una de esas películas que, si te gusta el género, no podés dejar de ver. Ambientada en el sur de Estados Unidos. Dos amigos deciden hacer un hackeo que trae consecuencias mayúsculas inesperadas.</p>
                                 <p class="card-text">+16. Acción. 104min.<br>Director: John Jackson.<br>Origen: USA</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
@@ -152,7 +152,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portada4.webp" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 4">
+                            <img src="./assets/portada4.webp" class="img-fluid rounded-start w100" alt="portada pelicula 4">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -176,7 +176,7 @@
                             <div class="card-body">
                                 <h2 class="card-title">El viento trae una cosa (1998)</h2>
                                 <h3 class="card-subtitle">Cine Club Temporada 71</h3>
-                                <p class="card-text">Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro.</p>
+                                <p class="card-text">Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro y todo puede pasar muy rápido.</p>
                                 <p class="card-text">ATP. Drama. 102min.<br>Director: Juan Trip.<br>Origen: Argentina</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
@@ -211,7 +211,7 @@
         </div>
         <div class="container-pelis" id="proximas-peliculas">
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid" src="./assets/proxi1.webp" alt="portada de la pelicula el arbol de la desdicha">
+                <img class="portada-peli fluid bbc" src="./assets/proxi1.webp" alt="portada de la pelicula el arbol de la desdicha">
                 <figcaption class="fig-peli">Estrena 22/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
@@ -277,7 +277,9 @@
         </aside>
         <!-- start noticias cine america -->
         <aside class="noticias-camerica" id="noticias-cine">
-            <a href="./pages/cineclub.html"><img class="publ-cine wow flipInX" src="./assets/publi.webp" alt="publicidad cine america"></a>
+            <div class="divpu">
+                <img class="publ-cine wow flipInX" src="./assets/publi.webp" alt="publicidad cine america">
+            </div>
         </aside>
     </section>
     <footer id="contacto">
