--- a/pages/cartelera.html
+++ b/pages/cartelera.html
@@ -55,14 +55,14 @@
     <main class="container-fluid">
         <!-- cartelera -->
         <h1>En Cartelera</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4 colcenter px-5 py-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4 sm-12 colcenter px-5 py-4">
             <!-- pelicula1 -->
             <div>
               <div class="card h-100 colgrid">
                 <a href="../pages/entradas.html">
-                  <div class="col-md-4">
-                  <img src="../assets/portada1.webp" class="card-img-top img-cartelera" alt="portada pelicula1">
-                  </div>
+                  
+                  <img src="../assets/portada1.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula1">
+                  
                 </a>
                 <div class="card-body">
                   <h2 class="card-title">Hasta el punto</h2>
@@ -79,7 +79,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada2.webp" class="card-img-top img-cartelera" alt="portada pelicula2">
+                    <img src="../assets/portada2.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula2">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">Cruce de datos</h2>
@@ -96,7 +96,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada3.webp" class="card-img-top img-cartelera" alt="portada pelicula3">
+                    <img src="../assets/portada3.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula3">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">El cocodrilo</h2>
@@ -109,13 +109,11 @@
                   </div>
                 </div>
             </div>          
-        </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4 colcenter px-5 py-4">
             <!-- pelicula4 -->
             <div class="col">
               <div class="card h-100 colgrid">
                 <a href="../pages/entradas.html">
-                  <img src="../assets/portada4.webp" class="card-img-top img-cartelera" alt="portada pelicula4">
+                  <img src="../assets/portada4.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula4">
                 </a>
                 <div class="card-body">
                   <h2 class="card-title">El orín del Diablo (2021)</h2>
@@ -132,12 +130,12 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada5.webp" class="card-img-top img-cartelera" alt="portada pelicula5">
+                    <img src="../assets/portada5.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula5">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">El viento trae una cosa (1998)</h2>
                     <h3 class="card-subtitle">Cine Club Temporada 71</h3>
-                    <p class="card-text">La primera de una saga exitosísima que terminó inspirando canciones y mitos populares. Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro. Parte del Ciclo CCT71, disponible solo esta semana en Cine America.</p>
+                    <p class="card-text">La primera de una saga exitosísima que terminó inspirando canciones y mitos populares. Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro. Parte del Ciclo CCT71, disponible solo esta semana.</p>
                     <h4 class="card-subtitle info-pelicula">ATP. Drama. <br>102 min.<br>Director: Juan Trip. <br>Origen: Argentina</h4>
                     <a class="btn-compra" href="../pages/entradas.html">
                       <button class="btn">Comprar entrada</button>
@@ -149,7 +147,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada6.webp" class="card-img-top img-cartelera" alt="portada pelicula6">
+                    <img src="../assets/portada6.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula6">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">La muerte del ocelote (2019)</h2>
