--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -57,22 +57,18 @@
         <section class="ingreso">
             <div class="crear-cuenta">
                 <div class="ingreso-usuario">
-                    <div class="iu">
-                        <p class="p-ingreso">Bienvenido</p>
-                        <form class="iu">
-                            <input class="for1" type="text" placeholder="Usuario">
-                            <input class="for1" type="password" placeholder="Contraseña">
-                            <button class="for2">Login</button>
-                        </form>
-                    </div>
-                    <div class="p-cuenta">
-                        <p>¿No tenes cuenta?</p>
-                        <a class="a-ingreso" href="./404.html"><p class="a-cuenta">Crear cuenta</p></a>
-                    </div>
+                    <p class="p-ingreso">Bienvenido</p>
+                    <form class="iu">
+                        <input class="for1" type="text" placeholder="Usuario">
+                        <input class="for1" type="password" placeholder="Contraseña">
+                        <button class="for2">Login</button>
+                    </form>
+                    <p>¿No tenes cuenta?</p>
+                    <a class="a-ingreso" href="./404.html"><p class="a-cuenta">Crear cuenta</p></a>
                 </div>
             </div>
             <div class="publi-perfil">
-                <img class="img-perfil" src="../assets/publi3.webp">
+                <img class="img-perfil" src="../assets/publi3.webp" alt="publicidad de proximo ciclo">
             </div>
         </section>
     </main>
