modifico proporciones en index

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             <img src="./assets/ban1.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica los domingos de peliculas de terror">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban2.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica los sabados de cine frances">
+            <img src="./assets/bann2.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica los sabados de cine frances">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban3.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica el ciclo desvelado">
+            <img src="./assets/bann3.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica el ciclo desvelado">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban4.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica el ciclo del orgullo">
+            <img src="./assets/bann4.webp" class="d-block w-100 h-80" alt="foto en carrusel que indica el ciclo del orgullo">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -274,13 +274,15 @@
                     <p class="p-info">En medio de rumores de una supuesta pelea, Joel y Ethan brindaron una entrevista hablando sobre su nueva y polémica película.</p>
                 </div>
             </figure>
-        </aside>
-        <!-- start noticias cine america -->
-        <aside class="noticias-camerica" id="noticias-cine">
-            <div class="divpu">
-                <img class="publ-cine wow flipInX" src="./assets/publi.webp" alt="publicidad cine america">
-            </div>
-        </aside>
+            <!-- start publicidad -->
+            <figure class="f2">
+                <div class="divpu">
+                    <a href="./pages/cineclub.html">
+                        <img class="publ-cine wow flipInX img-fluid" src="./assets/publi.webp" alt="publicidad cine america">
+                    </a>
+                </div>
+            </figure>
+        </aside>     
     </section>
     <footer id="contacto">
         <div class="social-media">
